src/test/ui/associated-type-bounds/implied-region-constraints.stderr
error[E0309]: the associated type `<<T as Tr1>::As1 as Tr2>::As2` may not live long enough
  --> $DIR/implied-region-constraints.rs:8:5
   |
LL |     f1: &'b <T::As1 as Tr2>::As2, // `<T::As1 as Tr2>::As2: 'a` is implied.
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `<<T as Tr1>::As1 as Tr2>::As2: 'b`...
   = note: ...so that the reference type `&'b <<T as Tr1>::As1 as Tr2>::As2` does not outlive the data it points at

error[E0309]: the associated type `<<T as Tr1>::As1 as Tr2>::As2` may not live long enough
  --> $DIR/implied-region-constraints.rs:27:8
   |
LL |     V1(&'b <T::As1 as Tr2>::As2),
   |        ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `<<T as Tr1>::As1 as Tr2>::As2: 'b`...
   = note: ...so that the reference type `&'b <<T as Tr1>::As1 as Tr2>::As2` does not outlive the data it points at

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
